[gd_scene load_steps=6 format=2]

[ext_resource path="res://MenuRoot.gd" type="Script" id=1]
[ext_resource path="res://CheatIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ScreenStretch.tscn" type="PackedScene" id=5]

[node name="MenuRoot" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="ScreenStretch" parent="." instance=ExtResource( 5 )]

[node name="ColorRect" parent="ScreenStretch" instance=ExtResource( 3 )]
margin_left = -16.0
margin_right = 16.0
expand = true
stretch_mode = 7
time_speed = 0.5

[node name="BackButton" parent="ScreenStretch" instance=ExtResource( 4 )]

[node name="CheatIndicator" parent="ScreenStretch" instance=ExtResource( 2 )]
position = Vector2( 0, 680 )

[node name="Tween" type="Tween" parent="."]

[node name="ClickMask" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="back_pressed" from="ScreenStretch/BackButton" to="." method="back"]
